--- a/.github/workflows/eda.yml
+++ b/.github/workflows/eda.yml
@@ -39,6 +39,7 @@ jobs:
         git config --local user.name "GitHub Action"
         git add data/
         git diff --quiet && git diff --staged --quiet || git commit -m "Update EDA artifacts - $(date +'%Y-%m-%d %H:%M:%S')"
+        git pull --rebase origin main
         git push
         
     - name: Trigger training workflow
