--- a/.github/workflows/eda.yml
+++ b/.github/workflows/eda.yml
@@ -23,10 +23,17 @@ jobs:
       with:
         python-version: '3.10'
         
+    - name: Install system deps for Kafka
+      run: |
+       sudo apt-get update
+       sudo apt-get install -y librdkafka-dev
+
     - name: Install dependencies
       run: |
-        pip install -r requirements.txt
-        pip install "hopsworks[python]"
+       pip install -r requirements.txt
+       pip install "hopsworks[python]"
+       pip install confluent-kafka
+
         
     - name: Run EDA and upload to Hopsworks
       env:
