--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -1,53 +1,56 @@
-# .github/workflows/train.yml
-name: 3. Model Training
-permissions:
-  contents: write
+name: 3. Train AQI Models
 
 on:
-  repository_dispatch:
-    types: [eda-completed]
-  workflow_dispatch:  # Manual trigger
+  workflow_dispatch:
   schedule:
-    - cron: '0 * * * *'  #Every hour
+    - cron: "0 * * * *"   # every hour
 
 jobs:
-  train-models:
+  train:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-      with:
-        ref: main
-        
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-        
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
-        
-    - name: Train models and predict
-      env:
-        HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
-        OWM_API_KEY: ${{ secrets.OWM_API_KEY }}
-      run: |
-        python scripts/training.py
-        
-    - name: Upload model artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: trained-models
-        path: models/
-        retention-days: 30
-        
-    - name: Commit results
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add models/ data/
-        git diff --quiet && git diff --staged --quiet || git commit -m "Update trained models - $(date +'%Y-%m-%d %H:%M:%S')"
-        git pull --rebase origin main
-        git push
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1   # no full history needed
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+
+      - name: Run Training Pipeline
+        run: |
+          python train.py
+
+      # Upload trained models
+      - name: Upload Models
+        uses: actions/upload-artifact@v4
+        with:
+          name: trained-models
+          path: |
+            linear_model.pkl
+            poly_coeffs.npy
+            linear_model.pth
+            mlp_model.pth
+            gb_model.pkl
+            xgb_model.json
+            rf_model.pkl
+            models/
+
+      # Upload evaluation results (CSV outputs)
+      - name: Upload Results Data
+        uses: actions/upload-artifact@v4
+        with:
+          name: training-results
+          path: |
+            data/training_results.csv
+            data/future_aqi_predictions.csv
+            data/future_prediction_comparison.csv
