--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+          pip install -r requirements.txt --extra-index-url https://download.pytorch.org/whl/cpu      
+# pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
 
       - name: Run Training Pipeline
         run: |
