--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,12 @@ requests==2.31.0
 # Machine Learning
 scikit-learn==1.3.2
 xgboost==2.0.3
-torch==2.1.2
+torch==2.2.2+cpu
+torchvision==0.17.2+cpu
+torchaudio==2.2.2+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
+
+# torch==2.1.2
 
 # Statistics
 statsmodels==0.14.1
