--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -28,6 +28,8 @@ jobs:
 
       - name: Run Training Pipeline
         run: |
+          env:
+            HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
           python scripts/training.py
 
       # Upload trained models
