--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -27,10 +27,10 @@ jobs:
 # pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
 
       - name: Run Training Pipeline
-        run: |
-          env:
+        env:
             HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
-          python scripts/training.py
+        run: python scripts/training.py
+     
 
       # Upload trained models
       - name: Upload Models
