--- a/.github/workflows/eda.yml
+++ b/.github/workflows/eda.yml
@@ -30,7 +30,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-       pip install -r requirements.txt
+       pip install -r requirements_training.txt
        pip install "hopsworks[python]"
        pip install confluent-kafka
 
