--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-
+streamlit
 pandas==2.1.4
-numpy==1.26.4
+numpy
+scikit-learn
 torch==2.2.2+cpu
-scikit-learn==1.3.2
-hopsworks==3.4.4
-streamlit==1.33.0
-matplotlib==3.8.0
-joblib==1.3.2
+torchaudio==2.2.2+cpu
+torchvision==0.17.2+cpu
+joblib
+matplotlib
+
 
