--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,11 @@ streamlit
 pandas==2.1.4
 numpy
 scikit-learn
-torch==2.2.2+cpu
-torchaudio==2.2.2+cpu
-torchvision==0.17.2+cpu
 joblib
 matplotlib
+
+# CPU PyTorch
+torch==2.2.2+cpu -f https://download.pytorch.org/whl/torch_stable.html
+
 
 
