--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ scikit-learn
 matplotlib
 joblib
 plotly
-
+statsmodels
 # Install CPU-only PyTorch correctly:
 torch==2.2.2+cpu
 torchvision==0.17.2+cpu
