--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -14,40 +14,76 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           persist-credentials: true
-
+          
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
-
+          
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements_training.txt --extra-index-url https://download.pytorch.org/whl/cpu
-
+          
       - name: Run Training Pipeline
         env:
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
           OWM_API_KEY: ${{ secrets.OWM_API_KEY }}
         run: python scripts/training.py
-
+        
+      - name: Debug - List Generated Files
+        run: |
+          echo "=== Files in root ==="
+          ls -la *.pkl *.pth *.npy *.json 2>/dev/null || echo "No model files in root"
+          echo "=== Files in data/ ==="
+          ls -la data/ 2>/dev/null || echo "No data directory"
+          echo "=== Files in checkpoints/ ==="
+          ls -la checkpoints/ 2>/dev/null || echo "No checkpoints directory"
+          echo "=== Files in best_models/ ==="
+          ls -la best_models/ 2>/dev/null || echo "No best_models directory"
+          
       - name: Commit Updated Files
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           
-          # Fix date command with proper quoting
+          # Create timestamp
           TIMESTAMP=$(date '+%Y-%m-%d %H:%M UTC')
           
-          git add data/ checkpoints/ best_models/ *.pkl *.npy *.pth *.json selected_features.json scaler.pkl || true
+          # Stage files explicitly (more reliable than globs)
+          git add data/training_results.csv || echo "training_results.csv not found"
+          git add data/future_aqi_predictions.csv || echo "future_aqi_predictions.csv not found"
+          git add data/future_prediction_comparison.csv || echo "future_prediction_comparison.csv not found"
           
+          # Stage model files
+          git add linear_model.pkl || true
+          git add poly_coeffs.npy || true
+          git add linear_model.pth || true
+          git add mlp_model.pth || true
+          git add gb_model.pkl || true
+          git add xgb_model.json || true
+          git add rf_model.pkl || true
+          git add scaler.pkl || true
+          git add selected_features.json || true
+          git add previous_best_results.csv || true
+          
+          # Stage directories if they exist
+          git add checkpoints/ || true
+          git add best_models/ || true
+          
+          # Show what's staged
+          echo "=== Staged files ==="
+          git status --short
+          
+          # Commit if there are changes
           if git diff --staged --quiet; then
-            echo "No changes to commit."
+            echo "⚠️ No changes to commit."
           else
             git commit -m "Update training results and forecasts [$TIMESTAMP]"
             git push origin HEAD:main
+            echo "✅ Successfully committed and pushed changes"
           fi
-
+          
       - name: Upload Models
         uses: actions/upload-artifact@v4
         with:
@@ -60,12 +96,11 @@ jobs:
             gb_model.pkl
             xgb_model.json
             rf_model.pkl
-            models/
-            checkpoints/
-            best_models/
             scaler.pkl
             selected_features.json
-
+            checkpoints/
+            best_models/
+            
       - name: Upload Results Data
         uses: actions/upload-artifact@v4
         with:
