--- a/requirements_training.txt
+++ b/requirements_training.txt
@@ -6,6 +6,8 @@ requests==2.31.0
 # Machine Learning
 scikit-learn==1.3.2
 xgboost==2.0.3
+lightgbm==4.3.0  # Added for consistency, although not strictly needed if in the environment
+catboost==1.2.5  # <--- REQUIRED: Added CatBoost
 torch==2.2.2+cpu
 torchvision==0.17.2+cpu
 torchaudio==2.2.2+cpu
