--- a/.github/workflows/fetch_data.yml
+++ b/.github/workflows/fetch_data.yml
@@ -5,7 +5,7 @@ permissions:
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Every 2 hours
+    - cron: '0 * * * *'  
   workflow_dispatch:  # Manual trigger
 
 jobs:
