--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -2,7 +2,7 @@ name: 3. Train AQI Models
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 * * * *" # every hour
+    - cron: "0 * * * *" 
 jobs:
   train:
     runs-on: ubuntu-latest
@@ -14,7 +14,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           persist-credentials: true
-          fetch-depth: 0  # ← FULL CLONE: allows git pull
+          fetch-depth: 0  
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -30,7 +30,6 @@ jobs:
         env:
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
           OWM_API_KEY: ${{ secrets.OWM_API_KEY }}
-        # Assuming your script is named train.py in the root. Adjust the path if needed (e.g., scripts/train.py)
         run: python scripts/training.py 
 
       - name: Debug - List Generated Files
